--- a/GUI/TableSub.ui
+++ b/GUI/TableSub.ui
@@ -73,7 +73,7 @@
     <item>
      <widget class="QPushButton" name="pushButton">
       <property name="text">
-       <string>PushButton</string>
+       <string>Load subtitle</string>
       </property>
      </widget>
     </item>
