--- a/GUI/fr.ui
+++ b/GUI/fr.ui
@@ -107,7 +107,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QTableWidget" name="TranslationTable">
+          <widget class="QTableView" name="TranslationTable">
            <property name="enabled">
             <bool>true</bool>
            </property>
@@ -126,52 +126,6 @@
            <property name="sortingEnabled">
             <bool>true</bool>
            </property>
-           <property name="columnCount">
-            <number>5</number>
-           </property>
-           <attribute name="horizontalHeaderVisible">
-            <bool>true</bool>
-           </attribute>
-           <attribute name="horizontalHeaderCascadingSectionResizes">
-            <bool>false</bool>
-           </attribute>
-           <attribute name="horizontalHeaderDefaultSectionSize">
-            <number>90</number>
-           </attribute>
-           <attribute name="horizontalHeaderMinimumSectionSize">
-            <number>25</number>
-           </attribute>
-           <attribute name="horizontalHeaderStretchLastSection">
-            <bool>true</bool>
-           </attribute>
-           <attribute name="verticalHeaderVisible">
-            <bool>false</bool>
-           </attribute>
-           <column>
-            <property name="text">
-             <string>Known</string>
-            </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>Word</string>
-            </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>Translation</string>
-            </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>Amount</string>
-            </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>Mentioned before</string>
-            </property>
-           </column>
           </widget>
          </item>
          <item>
